<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Meet4T</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Bluetooth -->
    <string name="ble_not_supported">Your device doesn\'t support Bluetooth 4\.0</string>
    <string name="ble_disable_fail">BLE failed to disable</string>
    <string name="enable_bluetooth">Enable BLE</string>
    <string name="disable_bluetooth">Disable BLE</string>
    <string name="search_devices">Search for devices</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_devices">Devices</string>
    <string name="error_bluetooth_not_supported">Error. BT not supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconncted</string>
    <string name="no_data">No data</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="label_device_address">Label device address</string>
    <string name="label_state">Label state</string>
    <string name="label_data">Label data</string>
    
    <!-- OrganizingMeeting -->
    <string name="get_people">Get people</string>
    <string name="show_people">Show people</string>
    <string name="invite">Invite</string>
    <string name="invite_people">Invite people</string>
    <string name="view_bump_file">View bump file</string>
    
<!--     Random -->
		<string name="main_bg">Main Activity Background</string>
		<string name="mug_icon">Mug icon</string>
		<string name="own_mug">own_mug</string>
		<string name="action_set_own_mug">Set own mug</string>
		<string name="demo1">Demo 1</string>
		<string name="demo2">Demo 2</string>
</resources>
